tests/errors/err_var_type_mismatch.mix
// ERROR: cannot assign str
main()
    x: int = "hello"
